--- a/package.json
+++ b/package.json
@@ -10,6 +10,7 @@
   },
   "dependencies": {
     "bootstrap": "^5.3.3",
+    "gh-pages": "^6.3.0",
     "lightweight-charts": "^5.0.3",
     "next": "15.2.0",
     "react": "^19.0.0",
