--- a/package.json
+++ b/package.json
@@ -6,7 +6,9 @@
     "dev": "next dev --turbopack",
     "build": "next build",
     "start": "next start",
-    "lint": "next lint"
+    "lint": "next lint",
+    "predeploy": "npm run build",
+    "deploy": "gh-pages -d out"
   },
   "dependencies": {
     "bootstrap": "^5.3.3",
@@ -26,5 +28,6 @@
     "eslint": "^9",
     "eslint-config-next": "15.2.0",
     "typescript": "^5"
-  }
+  },
+  "homepage": "https://TMThaor.github.io/bitcoin-chart"
 }
